# eda-socialnetwork

./: README.md  docker-compose.yml
backend/: Cargo.toml  backend.dockerfile
backend/src/: main.rs
consumer/: Cargo.toml  consumer.dockerfile
consumer/src/: main.rs
frontend/: Cargo.toml  frontend.dockerfile
frontend/src/: handlers.rs  main.rs
frontend/static/: glitch.css  main.css
frontend/templates/: .nav-item.html.swp  404.html  analytics.html  community.html  followers.html  footer.html  fortune.html  fortune_result.html  main.html  nav-item.html  nav.html  post.html  profile.html  redirectfollower.html
identity/: Cargo.toml
identity/src/: main.rs
