[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.12.0"
fake = { version = "2.9.2", features = ["derive"] }
axum = { version = "0.7.4", features = ["macros"] }
axum-util = "0.2.2"
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"]}
http = "1.1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"] }
rskafka = "0.5.0"
chrono = "0.4.35"
rand = "0.8.5"
