[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"] }
chrono = "0.4.35"
rskafka = "0.5.0"
ctrlc = { version = "3.4.4", features = ["termination"] }
scylla = "0.12.0"
serde_json = "1.0.114"
