[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.11" }
fake = { version = "2.9.2", features = ["derive"] }
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
rskafka = "0.5.0"
chrono = "0.4.35"
reqwest = "0.11"
tower-http = { version = "0.5.0", features = ["fs", "trace"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
