[package]
name = "identity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.9.2", features = ["derive"] }
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
rskafka = "0.5.0"
chrono = "0.4.35"
